--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: csharp
-solution: AS.sln
+solution: src/AS.sln
 install:
   - sudo apt-get install -y gtk-sharp2
-  - nuget restore AS.sln
+  - nuget restore src/AS.sln
