--- a/src/AS.Domain.Interfaces/AS.Domain.Interfaces.csproj
+++ b/src/AS.Domain.Interfaces/AS.Domain.Interfaces.csproj
@@ -37,6 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\IHashTable.cs" />
