Some fixes are done.
--> IE navigator.languages missing fix
--> Encryption IDisposable object disposed
--> Menu URLs are fixed
-->

--- a/.gitignore
+++ b/.gitignore
@@ -253,3 +253,6 @@ paket-files/
 src/TODO.xlsx
 BuildProcessTemplates/
 src/AS.Admin/App_Data/ASConfiguration.xml
+src/AS.Admin/Content/AS/script/asframe.js
+src/AS.Admin/Content/AS/script/asframe.js.map
+*.bowerrc
