--- a/src/AS.Admin/Web.config
+++ b/src/AS.Admin/Web.config
@@ -9,6 +9,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="None"/>
     <!--<customErrors mode="On" defaultRedirect="~/500" redirectMode="ResponseRedirect">
       <error statusCode="404" redirect="~/404" />
       <error statusCode="500" redirect="~/500" />
@@ -76,7 +77,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
