--- a/src/AS.Admin/AS.Admin.csproj
+++ b/src/AS.Admin/AS.Admin.csproj
@@ -53,8 +53,8 @@
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Autofac, Version=4.2.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.4.2.1\lib\net45\Autofac.dll</HintPath>
+    <Reference Include="Autofac, Version=4.3.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.3.0\lib\net45\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Autofac.Integration.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
@@ -73,8 +73,8 @@
       <HintPath>..\packages\EntityFramework.SqlServerCompact.6.1.3\lib\net45\EntityFramework.SqlServerCompact.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="FluentScheduler, Version=5.1.2.0, Culture=neutral, PublicKeyToken=b76503528a14ebd1, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentScheduler.5.1.2\lib\net40\FluentScheduler.dll</HintPath>
+    <Reference Include="FluentScheduler, Version=5.1.3.0, Culture=neutral, PublicKeyToken=b76503528a14ebd1, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentScheduler.5.1.3\lib\net40\FluentScheduler.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FluentValidation, Version=6.2.1.0, Culture=neutral, processorArchitecture=MSIL">
@@ -122,6 +122,10 @@
       <HintPath>..\packages\Microsoft.Owin.Security.Cookies.3.0.1\lib\net45\Microsoft.Owin.Security.Cookies.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Owin.Security.Google, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Security.Google.3.0.1\lib\net45\Microsoft.Owin.Security.Google.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Owin.Security.OAuth, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Owin.Security.OAuth.3.0.1\lib\net45\Microsoft.Owin.Security.OAuth.dll</HintPath>
       <Private>True</Private>
@@ -139,7 +143,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.4.1\lib\net45\NLog.dll</HintPath>
+      <HintPath>..\packages\NLog.4.4.2\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
@@ -155,6 +159,7 @@
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -3654,9 +3659,6 @@
     <Content Include="Content\moment\src\locale\zh-hk.js" />
     <Content Include="Content\moment\src\locale\zh-tw.js" />
     <Content Include="Content\moment\src\moment.js" />
-    <Content Include="Content\moment\templates\default.js" />
-    <Content Include="Content\moment\templates\locale-header.js" />
-    <Content Include="Content\moment\templates\test-header.js" />
     <Content Include="Content\AS\css\pace.css" />
     <Content Include="Content\pace\pace.js" />
     <Content Include="Content\pace\pace.min.js" />
@@ -3830,6 +3832,7 @@
     <Content Include="Content\datatables.net-buttons-bs\.bower.json" />
     <Content Include="Content\datatables.net-buttons-bs\bower.json" />
     <Content Include="Content\datatables.net-buttons-bs\Readme.md" />
+    <Content Include="Views\Notifications\List.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -3887,6 +3890,7 @@
     <Compile Include="Controllers\IdentityController.cs" />
     <Compile Include="Controllers\InstallerController.cs" />
     <Compile Include="Controllers\LanguageController.cs" />
+    <Compile Include="Controllers\NotificationsController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\SchedulerController.cs" />
@@ -3909,6 +3913,8 @@
     <Compile Include="Models\Identity\LoginModel.cs" />
     <Compile Include="Models\Identity\ResetPasswordModel.cs" />
     <Compile Include="Models\Configuration\ConfigurationModel.cs" />
+    <Compile Include="Models\Notifications\NotificationListModel.cs" />
+    <Compile Include="Models\Notifications\NotificationModel.cs" />
     <Compile Include="Models\Settings\ApplicationSettingsModel.cs" />
     <Compile Include="Models\Settings\EMailSettingModel.cs" />
     <Compile Include="Models\Settings\HTMLTemplateModel.cs" />
@@ -4043,7 +4049,6 @@
     <TypeScriptCompile Include="Content\AS\script\JobStatus.ts" />
     <TypeScriptCompile Include="Content\AS\script\UI\DateTimeRenderer.ts" />
     <TypeScriptCompile Include="Content\AS\script\UI\ResetPageButton.ts" />
-    <TypeScriptCompile Include="Content\moment\moment.d.ts" />
     <TypeScriptCompile Include="Content\TypescriptDefinitions\bootstrap-dialog.d.ts" />
     <TypeScriptCompile Include="Content\TypescriptDefinitions\bootstrap.d.ts" />
     <TypeScriptCompile Include="Content\TypescriptDefinitions\fancybox.d.ts" />
