--- a/src/AS.Admin/packages.config
+++ b/src/AS.Admin/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
-  <package id="Autofac" version="4.2.1" targetFramework="net46" />
+  <package id="Autofac" version="4.3.0" targetFramework="net46" />
   <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net46" />
-  <package id="FluentScheduler" version="5.1.2" targetFramework="net46" />
+  <package id="FluentScheduler" version="5.1.3" targetFramework="net46" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net46" />
   <package id="FluentValidation.MVC5" version="6.2.1.0" targetFramework="net46" />
   <package id="Mapster" version="2.6.1" targetFramework="net46" />
@@ -25,13 +25,14 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
-  <package id="NLog" version="4.4.1" targetFramework="net46" />
+  <package id="NLog" version="4.4.2" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
