--- a/src/AS.Infrastructure.Web/AS.Infrastructure.Web.csproj
+++ b/src/AS.Infrastructure.Web/AS.Infrastructure.Web.csproj
@@ -46,7 +46,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Autofac.Integration.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.Mvc5.4.0.0\lib\net451\Autofac.Integration.Mvc.dll</HintPath>
+      <HintPath>..\packages\Autofac.Mvc5.4.0.1\lib\net45\Autofac.Integration.Mvc.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework">
@@ -78,6 +78,10 @@
     </Reference>
     <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Host.SystemWeb, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Host.SystemWeb.3.0.1\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Owin.Security, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -169,6 +173,7 @@
     <Compile Include="Extensions\ExpressionExtension.cs" />
     <Compile Include="Identity\ASUserExtension.cs" />
     <Compile Include="Mvc\Base\ViewModelHeader.cs" />
+    <Compile Include="Mvc\ChallengeResult.cs" />
     <Compile Include="Mvc\Filters\LastActivityUpdateActionFilter.cs" />
     <Compile Include="Mvc\Validation\RecaptchaValidator.cs" />
     <Compile Include="Mvc\Filters\ValidateRecaptchaAttribute.cs" />
