--- a/src/AS.Infrastructure.Web/packages.config
+++ b/src/AS.Infrastructure.Web/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="Autofac" version="4.3.0" targetFramework="net46" />
-  <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net46" />
+  <package id="Autofac.Mvc5" version="4.0.1" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="FluentScheduler" version="5.1.3" targetFramework="net46" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net46" />
@@ -15,6 +15,7 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net46" />
